# ctci-rs

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
src/: lib.rs
src/ch01_arrays_and_strings/: info.rs  iq01.rs  iq01b.rs  iq02.rs  iq03.rs  mod.rs  tests.rs
src/ch01_arrays_and_strings/metadata/: iq01.rs  iq02.rs  iq03.rs  iq04.rs
src/ch02_linked_lists/: info.rs  iq01.rs  mod.rs  tests.rs
src/ch03_stacks_and_queues/: info.rs  mod.rs  tests.rs
src/ch03_stacks_and_queues/metadata/: iq01.rs
src/ch04_trees_and_graphs/: info.rs  tests.rs
src/ch05_bit_manipulation/: info.rs  mod.rs  tests.rs
src/ch06_math_and_logic_puzzles/: info.rs  mod.rs  tests.rs
src/ch07_object_oriented_design/: info.rs  mod.rs  tests.rs
src/ch08_recursion_and_dynamic_programming/: info.rs  mod.rs  tests.rs
src/ch09_system_design_and_scalability/: info.rs  tests.rs
src/ch10_sorting_and_searching/: info.rs  mod.rs  tests.rs
src/ch11_testing/: info.rs  tests.rs
src/ch12_c_and_cpp/: info.rs  mod.rs  tests.rs
src/ch13_java/: info.rs  tests.rs
src/ch14_databases/: info.rs  tests.rs
src/ch15_threads_and_locks/: info.rs  tests.rs
src/ch16_moderate/: info.rs  tests.rs
src/ch17_hard/: info.rs  mod.rs  tests.rs
src/demo/: example.rs  mod.rs
src/extra/: Cargo.toml
src/extra/src/: lib.rs
src/gen_tests/: Cargo.toml
src/gen_tests/src/: lib.rs
src/parse_tests/: Cargo.toml
src/parse_tests/src/: lib.rs
tools/: populate_structure.rs
