[package]
name = "ctci-rs"
version = "0.1.0"
edition = "2021"


[dependencies]
paste = "1.0.14"
gen_tests = { path = "src/gen_tests" }
extra = { path = "src/extra" }
chrono = "0.4.34"
syn = { version = "2.0.52", features = ["clone-impls", "derive", "full", "parsing", "printing", "proc-macro", "quote", "extra-traits", "fold", "test", "visit", "visit-mut"] }
lazy_static = "1.4.0"

[workspace]
members = [
    ".",
    "src/extra",
    "src/gen_tests",
]

[features]
demo = []

[build-dependencies]
chrono = "0.4.34"
syn = { version = "2.0.52", features = ["clone-impls", "derive", "full", "parsing", "printing", "proc-macro", "quote", "extra-traits", "fold", "test", "visit", "visit-mut"] }

[profile.dev]
opt-level = 0
debug = 2
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
debug = 2

[[bin]]
name = "build_test"
path = "src/bin/build_test.rs"

